# sebastian-claude-marketplace

./: .gitignore  README.md
.claude-plugin/: marketplace.json  plugin.json
docs/: DEVELOPMENT.md
docs/plans/: 2025-12-08-plugin-restructure-design.md
plugins/ai-tool-bridge/: README.md  pyproject.toml
plugins/jetbrains-integration/: README.md
plugins/project-memory/: README.md  plugin.json
plugins/serena/: plugin.json
plugins/serena-integration/: README.md
plugins/skills-daemon/: README.md  pyproject.toml
plugins/skills-daemon/.claude-plugin/: plugin.json
plugins/skills-daemon/.serena/: project.yml
plugins/skills-daemon/cli/: daemon_ctl.py  skills_client.py
plugins/skills-daemon/contrib/systemd/: install.sh  skills-daemon.service
plugins/skills-daemon/docs/: DEVELOPMENT.md
plugins/skills-daemon/docs/plans/: 2025-12-10-daemon-installation-design.md  2025-12-10-professional-refactor.md
plugins/skills-daemon/skills_daemon/: __init__.py  colors.py  config.py  dependencies.py  formatters.py  lifecycle.py  logging.py  main.py
plugins/skills-daemon/skills_daemon/plugins/: __init__.py
plugins/skills-daemon/tests/: conftest.py
plugins/skills-daemon/tests/integration/: test_endpoints.py
plugins/skills-daemon/tests/unit/: test_client.py  test_colors.py  test_config.py  test_formatters.py  test_lifecycle.py  test_main_discovery.py  test_plugin_lifecycle.py  test_registry.py
plugins/test-plugin/: README.md  plugin.json
scripts/: list.sh  new-agent.sh  new-command.sh  new-hook.sh  new-mcp.sh  new-plugin.sh  new-skill.sh  validate.sh
templates/agent/: agent.md.template
templates/command/: command.md.template
templates/hook/: hooks.json.template
templates/plugin/: README.md.template  plugin.json.template
(+274 files in other folders)
