[project]
name = "skills-daemon"
version = "1.0.0"
description = "Central daemon for Claude Code skills"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.109.0",
    "uvicorn[standard]>=0.27.0",
    "httpx>=0.26.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
]

[project.scripts]
skills-daemon = "cli.daemon_ctl:main"
skills-client = "cli.skills_client:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
